Updated the link for the JavaScript, and added more content to accessories_tables.html. Added the proper href link for the Accessories page in temper_tables_index.html. Updated the ID in one of the functions in accessories_tables.js.

--- a/nioh2/tools/temper_tables/accessories_tables.html
+++ b/nioh2/tools/temper_tables/accessories_tables.html
@@ -793,6 +793,10 @@
                         <td>-</td>
                     </tr>
                     <tr class="even:bg-dark-gray-2">
+                        <td><span class="text-divine-text-color">Lucky Drop (Accessory)</span></td>
+                        <td>-</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
                         <td><span class="text-divine-text-color">Lucky Drop (Equipped Weapon)</span></td>
                         <td>-</td>
                     </tr>
@@ -800,9 +804,211 @@
                         <td><span class="text-divine-text-color">Lucky Drop (Equipped Armor)</span></td>
                         <td>-</td>
                     </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Dream of the Nioh Starred Attributes
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="nioh-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dream of the Nioh Starred Attributes</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
+
+            <!-- ==========
+            Damage Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th>Attribute</th>
+                        <th>Max Value</th>
+                    </tr>
+    
+                    <!-- ==========
+                    Table Data
+                    ========== -->
                     <tr class="even:bg-dark-gray-2">
-                        <td><span class="text-divine-text-color">Lucky Drop (Accessory)</span></td>
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            Melee Damage vs.
+                            <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                            <span class="text-debuff-text-color">Scorched</span> Enemy</td>
+                        <td>20.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            Melee Damage vs.
+                            <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                            <span class="text-debuff-text-color">Saturated</span> Enemy</td>
+                        <td>20.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            Melee Damage vs.
+                            <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                            <span class="text-debuff-text-color">Electrified</span> Enemy</td>
+                        <td>20.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            Melee Damage vs.
+                            <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                            <span class="text-debuff-text-color">Purified</span> Enemy</td>
+                        <td>20.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            Melee Damage vs.
+                            <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                            <span class="text-debuff-text-color">Corrupted</span> Enemy</td>
+                        <td>20.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-rare-text-color">Melee Damage</span>
+                        </td>
+                        <td>6.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-rare-text-color">Active Skill Damage</span>
+                        </td>
+                        <td>10.0 %</td>
+                    </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            No Conflict
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th>Attribute</th>
+                        <th>Max Value</th>
+                    </tr>
+    
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <img class="inline" src="./img/debuff_icon.png" alt="debuff icon">
+                            <span class="text-debuff-text-color">Sloth</span> (Ninjutsu Hit)
+                        </td>
                         <td>-</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <img class="inline" src="./img/debuff_icon.png" alt="debuff icon">
+                            <span class="text-debuff-text-color">Sloth</span> (Onmyo Magic Hit)
+                        </td>
+                        <td>-</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-uncommon-text-color">Melee Damage vs. Zero-Ki Enemy</span>
+                        </td>
+                        <td>20.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-uncommon-text-color">Jutsu Item Damage</span>
+                        </td>
+                        <td>6.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-uncommon-text-color">Sentience Charge</span>
+                        </td>
+                        <td>60.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-rare-text-color">Thrown Weapon Damage</span>
+                        </td>
+                        <td>16.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-rare-text-color">Untouched Clay Bell of Beckoning</span>
+                        </td>
+                        <td>6.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-exotic-text-color">Extend Status Enhancements</span>
+                        </td>
+                        <td>10.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-exotic-text-color">Extend Curse Nullification</span>
+                        </td>
+                        <td>40.0 %</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                            <span class="text-buff-text-color">Auto-Life Recovery</span> 
+                            <span class="text-divine-text-color">(Amrita Absorption)</span>
+                        </td>
+                        <td>-</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                            <span class="text-buff-text-color">Faster Ki Recovery</span> 
+                            <span class="text-divine-text-color">(Amrita Absorption)</span>
+                        </td>
+                        <td>-</td>
+                    </tr>
+                    <tr class="even:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/starred_icon.png" alt="starred effect icon">
+                            <span class="text-divine-text-color">Set Bonus Requirements Reduced</span>
+                        </td>
+                        <td>-1</td>
                     </tr>
                 </table>
             </div>
@@ -858,7 +1064,7 @@
     <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
 
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/tools/temper_tables/js/accessories_tables.js" defer></script> -->
-    <script type="text/javascript" src="./js/weapon_tables.js" defer></script>
+    <script type="text/javascript" src="./js/accessories_tables.js" defer></script>
 
 </body>
 </html>
