Updated the class order for the Floor Graces cards in floors.html. Added and completed the Restricted Temper Pools section in accessories_tables.html.

--- a/nioh2/tools/temper_tables/accessories_tables.html
+++ b/nioh2/tools/temper_tables/accessories_tables.html
@@ -1017,6 +1017,244 @@
 
 
     <!-- ========== ========== ========== ========== ==========
+    Farming For Graces
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div id="restricted" class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Restricted Temper Pools</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <!-- 3 Column Grid -->
+            <div class="w-full px-2 flex flex-col items-start lg:grid xl:grid-cols-3 2xl:px-0 gap-6">
+                <!-- ==========
+                Accessories that temper Fire Damage
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Fire Damage</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-4 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+                        
+                        <span>Divination Board</span>
+                        <span>Dragon Whistle</span>
+                        <span>Hazy Moon Flute</span>
+                        <span>Katei</span>
+                        <span>Magatama</span>
+                        <span>Pipe</span>
+                        <span>Semiore Flute</span>
+                        <span>Soul Core Box</span>
+                        <span>Two Leaves</span>
+                        <span>Water Dragon</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Water Damage
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Water Damage</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-4 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+                        
+                        <span>Divination Board</span>
+                        <span>Dragon Whistle</span>
+                        <span>Gourd</span>
+                        <span>Hazy Moon Flute</span>
+                        <span>Katei</span>
+                        <span>Magatama</span>
+                        <span>Semiore Flute</span>
+                        <span>Soul Core Box</span>
+                        <span>Two Leaves</span>
+                        <span>Water Dragon</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Lightning Damage
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Lightning Damage</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-4 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Divination Board</span>
+                        <span>Dragon Whistle</span>
+                        <span>Hazy Moon Flute</span>
+                        <span>Japanese Scissors</span>
+                        <span>Katei</span>
+                        <span>Magatama</span>
+                        <span>Semiore Flute</span>
+                        <span>Soul Core Box</span>
+                        <span>Sudama Netsuke</span>
+                        <span>Two Leaves</span>
+                        <span>Water Dragon</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Elemental Damage
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Elemental Damage</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-4 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Divination Board</span>
+                        <span>Dragon Whistle</span>
+                        <span>Hazy Moon Flute</span>
+                        <span>Katei</span>
+                        <span>Magatama</span>
+                        <span>Semiore Flute</span>
+                        <span>Soul Core Box</span>
+                        <span>Two Leaves</span>
+                        <span>Water Dragon</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Damage Taken (Critical)
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Damage Taken (Critical)</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-3 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Kobo Daishi's Beads</span>
+                        <span>Medicine Case</span>
+                        <span>Omamori</span>
+                        <span>Prayer Beads</span>
+                        <span>Wise General's Pill Box</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Damage Taken (Critical)
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Damage Taken (Critical)</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-3 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Kobo Daishi's Beads</span>
+                        <span>Medicine Case</span>
+                        <span>Omamori</span>
+                        <span>Prayer Beads</span>
+                        <span>Wise General's Pill Box</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Untouched Ninjutsu
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Untouched Ninjutsu</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-3 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Fan</span>
+                        <span>Kobo Daishi's Beads</span>
+                        <span>Kodama Netsuke</span>
+                        <span>Medicine Case</span>
+                        <span>Omamori</span>
+                        <span>Pipe</span>
+                        <span>Prayer Beads</span>
+                        <span>Sudama Netsuke</span>
+                        <span>Wise General's Pill Box</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Untouched Onmyo Magic
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Untouched Onmyo Magic</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-3 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Kobo Daishi's Beads</span>
+                        <span>Magatama</span>
+                        <span>Omamori</span>
+                        <span>Prayer Beads</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Life Recovery (Amrita Absorption)
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Life Recovery (Amrita Absorption)</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-3 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Kodama Netsuke</span>
+                        <span>Magatama</span>
+                        <span>Medicine Case</span>
+                        <span>Wise General's Pill Box</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+
+
+                <!-- ==========
+                Accessories that temper Amrita Guage Charge
+                ========== -->
+                <div class="w-full lg:h-[370px] mask rounded bg-dark-gray p-2 flex flex-col gap-4">
+                    <div class="w-full p-2 rounded bg-stone-900 font-bold text-xl leading-relaxed flex flex-col items-center gap-2">
+                        <span class="text-yellow-400 text-center">Accessories that temper Amrita Guage Charge</span>
+                    </div>
+
+                    <div class="w-full lg:h-[370px] mask rounded p-2 bg-dark-gray-2 grid grid-cols-2 justify-center items-center text-center text-slate-300 leading-relaxed
+                        text-base lg:text-xl gap-4 lg:gap-6">
+
+                        <span>Magatama</span>
+                        <span>Yasakani Magatama</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
