--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -309,7 +309,7 @@
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Takeminakata's Grace</span>
                     </div>
 
-                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid justify-items-center grid-cols-6 grid-rows-6 gap-4 text-slate-300 text-xl leading-relaxed">
+                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid grid-cols-6 grid-rows-6 justify-items-center gap-4 text-slate-300 text-xl leading-relaxed">
                         <span>1</span>
                         <span>4</span>
                         <span>7</span>
@@ -365,7 +365,7 @@
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Owatatsumi</span>
                     </div>
 
-                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid justify-items-center grid-cols-6 grid-rows-6 gap-4 text-slate-300 text-xl leading-relaxed">
+                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid grid-cols-6 grid-rows-6 justify-items-center gap-4 text-slate-300 text-xl leading-relaxed">
                         <span>2</span>
                         <span>5</span>
                         <span>8</span>
@@ -421,7 +421,7 @@
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Tsukuyomi</span>
                     </div>
 
-                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid justify-items-center grid-cols-6 grid-rows-6 gap-4 text-slate-300 text-xl leading-relaxed">
+                    <div class="w-full mask rounded py-2 bg-dark-gray-2 grid grid-cols-6 grid-rows-6 justify-items-center gap-4 text-slate-300 text-xl leading-relaxed">
                         <span>3</span>
                         <span>6</span>
                         <span>9</span>
