Updated content in weapon_tables.html.

--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -454,20 +454,42 @@
                     <!-- ==========
                     Table Data
                     ========== -->
-                    <tr class="bg-dark-gray-2">
+                    <tr class="odd:bg-dark-gray-2">
                         <td>
+                            <img class="inline" src="./img/special_effect_icon.png" alt="special effect icon">
                             <span class="text-exotic-text-color">Imbue Purity</span>
+                            <span class="text-red-500">(Innate Stat)</span>
                         </td>
                         <td>6</td>
                         <td>8</td>
                         <td>No</td>
                     </tr>
-                    <tr class="">
+                    <tr class="odd:bg-dark-gray-2">
                         <td>
+                            <span class="text-rare-text-color">Imbue Purity</span>
+                            <span class="text-red-500">(Random Drop Only)</span>
+                        </td>
+                        <td>5</td>
+                        <td>7</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <img class="inline" src="./img/special_effect_icon.png" alt="special effect icon">
                             <span class="text-exotic-text-color">Imbue Corruption</span>
+                            <span class="text-red-500">(Innate Stat)</span>
                         </td>
                         <td>6</td>
                         <td>8</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-rare-text-color">Imbue Corruption</span>
+                            <span class="text-red-500">(Random Drop Only)</span>
+                        </td>
+                        <td>5</td>
+                        <td>7</td>
                         <td>No</td>
                     </tr>
                 </table>
