--- a/nioh2/tools/temper_tables/torso_tables.html
+++ b/nioh2/tools/temper_tables/torso_tables.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temper Tables in Nioh 2</title>
+    <title>Torso Temper Tables</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -230,105 +230,118 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl">Temper Tables</h1>
+            <h1 class="text-yellow-400 text-5xl md:text-6xl p-2 text-center">Torso Temper Tables</h1>
+            <img src="./img/torso_icon.png" alt="Weapons icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
 
 
     <!-- ========== ========== ========== ========== ==========
-    Card Section
+    Table of Contents
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 flex flex-col items-center">
+        <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
+            <ol class="list-decimal list-inside text-xl text-sky-400">
+                <li><a class="hover:text-sky-600" href="javascript: ethereal_gear()">Ethereal Gear Only Attributes</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: nioh_gear()">Dream of the Nioh Starred Attributes</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: credits()">Credits</a></li>
+            </ol>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Jutsu Power Attribute Tables
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col justify-center items-center gap-6 rounded
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
             2xl:max-w-section-width lg:px-16">
 
-            <div class="w-full flex flex-wrap gap-6
-                md:grid md:grid-cols-2
-                2xl:grid 2xl:grid-cols-3">
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Jutsu Power Attribute Tables</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
 
-                <!-- ==========
-                Melee Temper Table (Button 1)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="./weapon_tables.html">
-                    <img class="" src="./img/weapons_icon.png" alt="Weapons icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Melee Temper Table</span>
-                </a>
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
 
-                <!-- ==========
-                Ranged Temper Table (Button 2)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="./ranged_tables.html">
-                    <img class="" src="./img/ranged_weapons_icon.png" alt="Ranged Weapons icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Ranged Temper Table</span>
-                </a>
+            <!-- ==========
+            Sensor Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Sensor Attributes</h3>
+            <div class="overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
 
-                <!-- ==========
-                Accessories Temper Table (Button 3)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="./accessories_tables.html">
-                    <img class="" src="./img/accessories_icon.png" alt="Accessories icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Accessories Temper Table</span>
-                </a>
-
-                <!-- ==========
-                Helmet Temper Table (Button 4)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="./helmet_tables.html">
-                    <img class="" src="./img/helmet_icon.png" alt="Helmet icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Helmet Temper Table</span>
-                </a>
-
-                <!-- ==========
-                Torso Temper Table (Button 5)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="./torso_tables.html">
-                    <img class="" src="./img/torso_icon.png" alt="Torso icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Torso Temper Table</span>
-                </a>
-
-                <!-- ==========
-                Gloves Temper Table (Button 6)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
-                    <img class="" src="./img/gloves_icon.png" alt="Gloves icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Gloves Temper Table</span>
-                </a>
-
-                <!-- ==========
-                Waist Temper Table (Button 7)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
-                    <img class="" src="./img/waist_icon.png" alt="Waist icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Waist Temper Table</span>
-                </a>
-
-                <!-- ==========
-                Boots Temper Table (Button 8)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
-                    <img class="" src="./img/boots_icon.png" alt="Boots icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Boots Temper Table</span>
-                </a>
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Ninjutsu Power</span></td>
+                        <td>11</td>
+                        <td>13</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Onmyo Magic Power</span></td>
+                        <td>11</td>
+                        <td>13</td>
+                        <td>No</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Credits
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 flex flex-col items-center">
+        <div class="lg:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start gap-4">
+            <h1 id="credits" class="text-yellow-400 text-4xl">Credits:</h1>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+            
+            <div class="flex flex-col gap-2 text-slate-300 text-xl">
+                <span>LiuKang1080, Oninomiru</span>
+
+                <span class="bold-text">
+                    <a class="text-sky-400 hover:text-sky-600" href="https://docs.google.com/spreadsheets/d/1A-uFgSck8pU5NOLh2OVpK_V5-AVfDW42wuiumuf7tlE/edit#gid=137724816"
+                    target="_blank" rel="noopener noreferrer">Ocean Machine's Nioh 2 Build Bible</a>
+                </span>
+
+                <span class="bold-text">Nioh Community Discord Server: 
+                    <a class="text-sky-400 hover:text-sky-600" href="https://discord.gg/pAH5U9mRBj" 
+                    target="_blank" rel="noopener noreferrer">Here</a></span>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Back to top button
+    ========== ========== ========== ========== ========== -->
+    <a id="back-to-top-button" href="#">Top</a>
 
 
     <!-- ========== ========== ========== ========== ==========
@@ -343,6 +356,13 @@
     <!-- Navbar JS -->
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
+
+    <!-- Top Button JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
+
+    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/tools/temper_tables/js/armor_tables.js" defer></script> -->
+    <script type="text/javascript" src="./js/armor_tables.js" defer></script>
 
 </body>
 </html>
