Updated content in picture_scrolls.html. Added the respective images.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -274,12 +274,12 @@
             </p>
             <div class="flex flex-col items-center gap-3">
                 <img src="./img/picture_scroll_drop.png" alt="Picture Scroll drop">
-                <span class="italic text-slate-300 text-xl leading-relaxed">A Scroll of the Damned drop in the Depths of the Underworld</span>
+                <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Scroll of the Damned drop in the Depths of the Underworld</span>
             </div>
 
             <div class="flex flex-col items-center gap-3">
                 <img src="./img/picture_scroll_full.png" alt="Full Picture Scroll Accessory">
-                <span class="italic text-slate-300 text-xl leading-relaxed">A Scroll of the Damned with the maximum number of attributes (6)</span>
+                <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Scroll of the Damned with the maximum number of attributes (6)</span>
             </div>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="text-red-600 font-bold">How to acquire Demon Parade Picture Scrolls?</span> The player must complete 
@@ -298,15 +298,18 @@
             ==========-->
             <h2 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Running Demon Parade Picture Scrolls</h2>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                When a player obtains a Picture Scroll, The Scroll will show fixed attributes along with other hidden 
-                attribues. The higher tier Picture Scrolls will have access to unique attributes, and will have more attribute 
-                slots. You can have a max total of 6 attributes (5 attributes + 1 Path Stat) with Scrolls of the Damned. 
-                Information about the higher tier Picture Scrolls is in the next section. The Picture Scroll can only be 
-                ran a limited number of times; it is displayed below the name of the Picture Scroll. Upon successfully completing
-                the Picture Scroll, the number of Attempts Allowed will be decreased by 1. Leaving the Picture Scroll mission 
-                through a <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch Fragment</a> or a 
-                <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch</a> will NOT decrease the number of 
-                Attempts Allowed.
+                When a player obtains a Picture Scroll, the Scroll will always show 2 locked attributes
+                <img class="inline" src="./img/special_effect_icon.png" alt="special effect icon">, along with 2 hidden 
+                attribues. The player must complete the Scroll to unlock the attribues. The total number of attributes varies 
+                depending on the rarity of the Scroll. Generally higher tier Scrolls will have more attributes (up to 5). Only 
+                Scrolls of the Damned will have the maximum total of 6 attributes (2 locked attribues 
+                <img class="inline pl-1" src="./img/special_effect_icon.png" alt="special effect icon">, up to 3 additional random
+                attributes, and 1 Path Stat). Picture Scrolls can only be ran a limited number of times; it is displayed below 
+                the name of the Picture Scroll. Upon successfully completing the Picture Scroll, the number of Attempts Allowed 
+                will be decreased by 1. Leaving the Picture Scroll mission through a 
+                <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch Fragment</a> or a 
+                <a class="text-sky-400 hover:text-sky-600" href="">Divine Branch</a> will NOT decrease the number of Attempts 
+                Allowed.
             </p>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 When a player obtains a Picture Scroll the Enemies that will appear in the Picture is listed at the bottom of the 
@@ -325,12 +328,18 @@
                 Scroll the guaranteed attributes will be unlocked along with a few other random attributes. We can choose to run 
                 the same Picture Scroll again, and upon completing the Picture Scroll again, the game will ask us if we want to 
                 keep the attributes the Scroll had previously or if we want to change 1 of the attributes. We can only change 1 
-                attribute at a time. The guaranteed attributes <span class="font-bold">CANNOT</span> be changed. 
+                attribute at a time. The guaranteed locked attributes shown with the symbol: 
+                <img class="inline px-1" src="./img/special_effect_icon.png" alt="special effect icon"> cannot be changed. 
             </p>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                The attributes are seeded for Picture Scrolls. This means that when you complete a Picture Scroll the "random" 
-                attributes will be the same no matter how many people complete that exact same scroll. Furthermore when an 
-                attribute is being replaced, the options the game gives you will be the same no matter where the Scroll came from.
+                The attributes are seeded for Picture Scrolls. This means that when you complete a Picture Scroll the new "random"
+                attributes will be the same no matter how many people complete that exact same scroll. Furthermore, when an 
+                attribute is being replaced, the options the game gives you will be the same. Ex) A player finishes running a
+                Picture Scroll and wants to replace the attribute <span class="text-exotic-text-color">Extend Curse Nullification</span>.
+                For this specific scroll since the attribues are seeded it will be replaced with <span class="text-divine-text-color">Counter-Yokai Tactics</span>.
+                When other players acquire this specific Scroll (either through Revenant farming or Co-op), when they attempt to change the
+                <span class="text-exotic-text-color">Extend Curse Nullification</span> attribue it will ALWAYS be replaced with 
+                <span class="text-divine-text-color">Counter-Yokai Tactics</span>.
             </p>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 When we reach 0 Attempts Allowed, but we need to run the Picture Scroll a few more times, we can use the 
